--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Lucas Leung">
         <!--title-->
         <!--This is the text on the tab-->
-        <title>reading_group_index</title>
+        <title>erice_reading_group_index</title>
 
         <!--style-->
         <style type="text/css">
@@ -32,17 +32,15 @@
             of the page which doesn't look good.-->
                 <div class="card mx_auto">
                     <div class="card-body">
-                        <h1>Reading Group on Weinberg's Cosmology</h1>
-                        <h2>Trinity Term 2023</h2>
+                        <h1>Erice Reading Group</h1>
+                        <h2>From Summer of 2025</h2>
                         <h2>Introduction</h2>
                         <p>
-                            This is a reading group hosted by Prof Andre Lukas and his research group. The main text is Steven Weinberg's Cosmology and we are planning to 
-                            go through most of the book with few omissions in between. 
+                            This is a reading group between Lucas and his amazing friends he made in Erice!
                         </p>
 
                         <p>
-                            We meet every Fridays at 1000 in the Freeman Room in Beecroft during term time. Outside term time the meeting time may vary. If you wish to join 
-                            you may contact Prof Andre Lukas at lukas@physics.ox.ac.uk.
+                            We meet --- online via zoom. If you wish to join you may contact me at <a href="mailto:lucas.leung@physics.ox.ac.uk">lucas.leung@physics.ox.ac.uk</a>.
                         </p>
 
 
@@ -55,6 +53,10 @@
                             are expected to also read the relevant sections of the book and try and understand the material the best they can as well before they turn up
                             to the discussions as well!
                         </p>
+                        <p>
+                            There will also be a 15-minute discussion allocated to discussing new papers (could just be interesting or related to the discussion topic)
+                            at the start of each session. The whole idea, really, is just to make it fun and stay in contact with every one with a bit of physics and mathematics...
+                        </p>
 
                         <table>
                             <tr>
@@ -65,28 +67,21 @@
                                 <th>Main Reference Section</th>
                             </tr>
                             <tr>
-                                <td>Week 6 Trinity / 2 Jun</td>
-                                <td>The Expansion of the Universe (I)</td>
-                                <td>FRW, Redshift, Stars</td>
-                                <td>Thomas</td>
-                                <td>Chapters 1.1-1.4</td>
+                                <td>Week 1 / 2 July</td>
+                                <td>Historical Introduction</td>
+                                <td>Relativistic Quantum Mechanics + catch-up + memes</td>
+                                <td>Lucas</td>
+                                <td>Weinberg Vol I Chapter 1-2</td>
                             </tr>
                             <tr>
-                                <td>Week 7 / 9 Jun</td>
-                                <td>The Expansion of the Universe (II)</td>
-                                <td>Dynamics of expansion, distances at large redshift, cosmic expansion, ages</td>
-                                <td>Fien</td>
-                                <td>Chapters 1.5-1.8</td>
+                                <td>Week 2 / 16 July</td>
+                                <td>Scattering Theory</td>
+                                <td>Scattering theory, new advancements?</td>
+                                <td>TBC</td>
+                                <td>Weinberg Vol Y Chapater3</td>
                             </tr>
                             <tr>
-                                <td>Week 8 / 16 Jun</td>
-                                <td>TBC</td>
-                                <td>quintenssence</td>
-                                <td>TBC</td>
-                                <td>TBC</td>
-                            </tr>
-                            <tr>
-                                <td>Week 9 / 23 Jun</td>
+                                <td>Week 3 / 23 Jun</td>
                                 <td>TBC</td>
                                 <td>TBC</td>
                                 <td>TBC</td>
@@ -102,6 +97,10 @@
 
                         <h3>Mathematical Background</h3>
                         <h3>Inflation</h3>
+
+                        <p>
+                            Back to my homepage <a href="https://lucasleung149.github.io">here</a>.
+                        </p>
                         
                     </div>
                 </div>
