--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
                                 <th>Main Reference Section</th>
                             </tr>
                             <tr>
-                                <td>Week 1 / 2 July</td>
+                                <td>Week 1 / 9 July</td>
                                 <td>Historical Introduction</td>
                                 <td>Relativistic Quantum Mechanics + catch-up + memes</td>
                                 <td>Lucas</td>
                                 <td>Weinberg Vol I Chapter 1-2</td>
                             </tr>
                             <tr>
-                                <td>Week 2 / 16 July</td>
+                                <td>Week 2 / 23 July</td>
                                 <td>Scattering Theory</td>
                                 <td>Scattering theory, new advancements?</td>
                                 <td>TBC</td>
                                 <td>Weinberg Vol Y Chapater3</td>
                             </tr>
                             <tr>
-                                <td>Week 3 / 23 Jun</td>
+                                <td>Week 3 / -</td>
                                 <td>TBC</td>
                                 <td>TBC</td>
                                 <td>TBC</td>
