--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                             <tr>
                                 <td>Week 2 / 23 July</td>
                                 <td>Scattering Theory</td>
-                                <td>Scattering theory, new advancements?</td>
+                                <td>Scattering theory, new advancements in scattering and amplitudes?</td>
                                 <td>TBC</td>
-                                <td>Weinberg Vol Y Chapater3</td>
+                                <td>Weinberg Vol I Chapater 3</td>
                             </tr>
                             <tr>
                                 <td>Week 3 / -</td>
