--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
                                 <th>Main Reference Section</th>
                             </tr>
                             <tr>
-                                <td>Week 1 / 9 July</td>
-                                <td>Historical Introduction</td>
-                                <td>Relativistic Quantum Mechanics + catch-up + memes</td>
+                                <td>Week 1 / 10 July</td>
+                                <td>Lorentz Representations</td>
+                                <td>Catch-up + Symmetries + Projective Representations</td>
                                 <td>Lucas</td>
-                                <td>Weinberg Vol I Chapter 1-2</td>
+                                <td>Weinberg Vol I Chapter 1, 2.1-2.3, 2.7</td>
                             </tr>
                             <tr>
-                                <td>Week 2 / 23 July</td>
-                                <td>Scattering Theory</td>
-                                <td>Scattering theory, new advancements in scattering and amplitudes?</td>
+                                <td>Week 2 / 24 July</td>
+                                <td>Wigner's Classification</td>
+                                <td>One particle representations, continuous spin representations, central charges</td>
                                 <td>TBC</td>
-                                <td>Weinberg Vol I Chapater 3</td>
+                                <td>Weinberg Vol I Chapater 2.4-2.6</td>
                             </tr>
                             <tr>
                                 <td>Week 3 / -</td>
